# bioevol

./: .gitignore  CMakeCache.txt  CMakeLists.txt  bioevol.pro  cmake_install.cmake  main.cpp  out.callgrind  run.sh  stats_best.txt  stats_mean.txt
BASH/: CMakeLists.txt  run.sh
BASH_CUDA/: CMakeLists.txt
BioEvolMdl/: BioEvolMdl.pro
bioevol/: bioevol.pro
src/: BP.cpp  BP.h  BP_Move.cpp  BP_Move.h  BP_Move_Block.cpp  BP_Move_Block.h  BP_Protein.cpp  BP_Protein.h  BP_Protein_Block.cpp  BP_Protein_Block.h  BP_Pump.cpp  BP_Pump.h  BP_Pump_Block.cpp  BP_Pump_Block.h  Common.cpp  Common.cu  Common.h  DNA.cpp  DNA.h  GraphicDisplay.cpp  GraphicDisplay.h  GridCell.cpp  GridCell.h  Move.cpp  Move.h  Organism.cpp  Organism.h  Protein.cpp  Protein.h  Pump.cpp  Pump.h  RNA.cpp  RNA.h  World.cpp  World.h
